--- a/style.css
+++ b/style.css
@@ -93,9 +93,9 @@ body {
   align-items: center;
   gap: 10px;
   cursor: pointer;
-  padding: 10px;
+  padding: 10px 20px;
   border: 3px solid transparent;
-  border-radius: 5px;
+  border-radius: 1000px;
   opacity: 0.7;
   transition: border 0.3s;
 }
