--- a/style.css
+++ b/style.css
@@ -134,3 +134,38 @@ body {
   color: #777;
   line-height: normal;
 }
+
+.menu_pill {
+  text-transform: uppercase;
+  padding: 5px 10px;
+  border: 2px solid rgba(255, 255, 255, 0.5);
+  border-radius: 1000px;
+}
+
+.menu_client_portal {
+}
+
+.menu_request_invite a:hover {
+  background-image: linear-gradient(to bottom right,  #431900, #e80622);
+}
+
+
+.footer_menu_right {
+  list-style-type: none!important;
+  font-weight: normal;
+  text-align: right;
+  float:right;
+  width: 200px;
+}
+
+.footer_menu_right li a {
+  color: rgba(255, 255, 255, 0.9);
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 12px;
+  transition: all 0.3s;
+}
+
+.footer_menu_right li a:hover {
+  letter-spacing: 3px;
+}
